--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <header class="borde">
             <h1>DULCEIDA BAGS</h1>
             <div class="header_logos">
-                <img class="img_usuario" width="22px" src="media/usuario.png" alt="">
+                <img class="img_usuario logo_animado" width="22px" src="media/usuario.png" alt="">
                 <h2>Mi cuenta</h2>
             </div>
             <div class="header_logos">
-                <img class="img_carrito" width="22px" src="media/carrito.png" alt="">
+                <img class="img_carrito logo_animado" width="22px" src="media/carrito.png" alt="">
                 <h2>Mi carrito</h2>
             </div>
         </header>
@@ -46,25 +46,26 @@
                     <div class="contenedor_cards">
                         <div class="card">
                             <img class="nuevos_ingresos_seccion" src="media/nuevosingresos.jpg" alt="">
-                            <h3 class="secciones_vistarapida">NUEVOS INGRESOS</h3>
+                            <h3 class="secciones_vistarapida anime">NUEVOS INGRESOS</h3>
                         </div>
                         <div class="card">
                             <img class="importadas_seccion"  src="media/importadas.jpg" alt="">
-                            <h3 class="secciones_vistarapida">MODELOS IMPORTADOS</h3>
+                            <h3 class="secciones_vistarapida anime">MODELOS IMPORTADOS</h3>
                         </div>
                         <div class="card">
                             <img class="bandoleras_seccion"  src="media/bandoleras.jpg" alt="">
-                            <h3 class="secciones_vistarapida">BANDOLERAS</h3>
+                            <h3 class="secciones_vistarapida anime">BANDOLERAS</h3>
                         </div>
                 </div>
             </section>
             <section id="presentacion_dulceida">
-                <div class="contenedor_video">
+                <div class="contenedor_video video_animado">
                <iframe class="videopresentacion" width="560" height="315" src="https://www.youtube.com/embed/ubhrmguj9ds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                </div>
             </section>
         </section>
         <aside class="borde aside">
+            <h3 class="aside_animado">SEGUINOS EN NUESTRAS REDES SOCIALES</h3>
             <img class="img_aside" src="media/aside1.jpg" alt="">
             <img class="img_aside" src="media/aside_2.jpg" alt="">
             <img class="img_aside" src="media/aside_3.jpg" alt="">
