comentado lo hecho hasta el momento

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div id="grilla">
+
+    <!-- <div id="grilla">
         <header class="borde">
             <h1>DULCEIDA BAGS</h1>
             <div class="header_logos">
@@ -79,7 +80,7 @@
             </div>
         </footer>
     </div>
-    
+     -->
 </body>
 
 </html>
