--- a/productos.html
+++ b/productos.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="productos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
@@ -28,67 +29,104 @@
                         <li><a href="">Mochilas</a></li>
                     </ul>
                 </li>
-                <li><a href="marroquineria.html">MARROQUINERÍA</a></li>
-                <li><a href="calzado.html">CALZADO</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
-
-    <section>
-        <h1 class="titulo_promociones">PROMOCIONES</h1>
-        <div class="promociones">
-            <div class="card">
-                <img width="200px" src="media/promo1.jpeg" alt="">
+    <section class="conteiner productos">
+        <div class="row">
+          <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/calzado1.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="card">
-                <img width="200px" src="media/promo2.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/promo3.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/promo4.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/promo5.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/promo6.jpeg" alt="">
-            </div>
+          </div>
         </div>
 
-        <h1 class="titulo_productos">TODOS LOS PRODUCTOS</h1>
-        <div class="todos_productos">
-            <div class="card">
-                <img width="200px" src="media/destacado2.jpeg" alt="">
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/calzado2.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="card">
-                <img width="200px" src="media/destacado1.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/destacado3.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/destacado4.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/destacado5.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/destacado6.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/calzado6.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/calzado3.jpeg" alt="">
-            </div>
-            <div class="card">
-                <img width="200px" src="media/calzado1.jpeg" alt="">
-            </div>
+          </div>
         </div>
-    </section>
+
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/calzado3.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/calzado5.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/destacado1.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/destacado2.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/destacado3.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="media/destacado4.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        </div>
+        </section>
+    </div>
 
     <footer class="pie">
         <h4>DULCEIDA BAGS</h4>
@@ -101,7 +139,7 @@
     <div class="logocontacto">
         <img width="100%" src="media/whatsapp.png" alt="logo whatsapp">
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
