--- a/index.html
+++ b/index.html
@@ -6,10 +6,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inicio_style.css">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  </head>
 
 <body>
 
+    <div class="conteiner">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" style="color: white;"  href="index.html">DULCEIDA BAGS</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="color: white;" href="productos.html" id="navbarScrollingDropdown" role="button">
+                      Productos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                      <li><a class="dropdown-item" href="#">Bandoleras</a></li>
+                      <li><a class="dropdown-item" href="#">Carteras</a></li>
+                      <li><a class="dropdown-item" href="#">Mochilas</a></li>
+                      <li><a class="dropdown-item" href="#">Bolsos</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Calzado</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="color: white;" href="contacto.html" id="navbarScrollingDropdown" role="button">
+                      Contacto
+                    </a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+
+          <section class="conteiner-fluid">
+            <div class="row">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="media/carrusel_1.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="media/carrusel_3.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="media/carrusel_2.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+          </section>
+
+          <section class="conteiner productos">
+          <div class="row">
+            <div class="col-sm-12 col-md-12">
+            <div class="card" style="width: 30rem;">
+              <img src="media/card1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">PRODUCTOS MÁS VENDIDOS</h5>
+                <a href="#" class="btn botoncard">visitar</a>
+              </div>
+            </div>
+          </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 col-md-12">
+              <div class="card" style="width: 30rem;">
+                <img src="media/card2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">NUEVOS INGRESOS</h5>
+                  <a href="#" class="btn botoncard">visitar</a>
+                </div>
+              </div>
+            </div>
+              </div>
+          </section>
+
+          <footer>
+          <div class="row">
+          <div class="col-sm-12 col-md-12">
+          <ul class="nav">
+            <i class="bi bi-whatsapp" href="https://www.instagram.com/dulceida_bags/"></i>
+            <i class="bi bi-instagram"><a href="#"></a></i>
+            <i class="bi bi-envelope"><a href="#"></a></i>
+          </ul>
+        </div>
+      </div>
+        </footer>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- <div id="grilla">
         <header class="borde">
             <h1>DULCEIDA BAGS</h1>
@@ -81,6 +184,8 @@
         </footer>
     </div>
      -->
+
+     
 </body>
 
 </html>
